syntax = "proto3";

package file_repository;

option go_package = "github.com/abaxoth0/Vega/common/protobuf/generated/go/services/file-repository";

import "services/file-repository/types.proto";

service FileRepositoryService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // Queries
  rpc GetFileByPath(GetFileByPathRequest) returns (stream FileChunk);

  // Commands
  rpc Mkdir(MkdirRequest) returns (StatusResponse);
  rpc UploadFile(stream FileContentRequest) returns (stream StatusResponse);
  rpc UpdateFileContent(stream FileContentRequest) returns (stream StatusResponse);
  rpc DeleteFiles(DeleteFilesRequest) returns (StatusResponse);
}
